<resources>
    <string name="app_name">Drive Wave</string>
    <string name="hintMobile">Mobile Number</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">E-Mail</string>
    <string name="city">City</string>
    <string name="displayname">Username</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_age">AGE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_api_key">AIzaSyCMKQEoOJokPHZWS884lUOJ4TG7h2vq6a8</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>